--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ yarn-error.log*
 
 # Editor directories and files
 .idea
-.vscode
+# .vscode
 *.suo
 *.ntvs*
 *.njsproj
@@ -22,3 +22,6 @@ yarn-error.log*
 
 #Electron-builder output
 /dist_electron
+
+# python api build files
+/public/api
