--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "electron:build": "vue-cli-service electron:build",
+    "electron:build": "chcp 65001 && cd py-api && pipenv run build && cd .. && vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
+    "preinstall": "node .scripts/pre-install.js && cd py-api && pipenv install --dev && cd ..",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps"
   },
@@ -16,8 +15,10 @@
     "core-js": "^3.4.4",
     "element-ui": "^2.4.5",
     "vue": "^2.6.10",
+    "vue-electron": "^1.0.6",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "zerorpc": "^0.9.8"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
@@ -27,9 +28,11 @@
     "@vue/cli-service": "^4.1.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.3",
-    "electron": "^5.0.13",
+    "electron": "5.0.13",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "node-gyp": "^6.1.0",
+    "node-loader": "^0.6.0",
     "sass": "^1.23.7",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-electron-builder": "^1.4.4",
@@ -45,13 +48,24 @@
       "plugin:vue/essential",
       "@vue/standard"
     ],
-    "rules": {},
     "parserOptions": {
       "parser": "babel-eslint"
+    },
+    "rules": {
+      "vue/attribute-hyphenation": "error",
+      "vue/html-closing-bracket-newline": "error",
+      "vue/html-end-tags": "error",
+      "vue/html-indent": "error",
+      "vue/html-quotes": "error",
+      "vue/max-attributes-per-line": "warning",
+      "vue/no-multi-spaces": "warning",
+      "vue/no-spaces-around-equal-signs-in-attribute": "error",
+      "vue/no-template-shadow": "error",
+      "vue/prop-name-casing": "error"
     }
   },
   "browserslist": [
-    "> 1%",
-    "last 2 versions"
+    "node 12.0.0",
+    "chrome 73"
   ]
 }
