update working build

--- a/.npmrc
+++ b/.npmrc
@@ -10,4 +10,4 @@ disturl=https://atom.io/download/electron
 runtime=electron
 build_from_source=true
 
-node_gyp="node D:\Documents\projects\new-electron-python-2\node_modules\node-gyp\bin\node-gyp.js"
+node_gyp=D:\Documents\projects\new-electron-python-2\node_modules\node-gyp\bin\node-gyp.js
