--- a/.npmrc
+++ b/.npmrc
@@ -1,13 +1,13 @@
 registry=https://registry.npm.taobao.org
-electron_mirror=http://npm.taobao.org/mirrors/electron/
+electron_mirror=https://npm.taobao.org/mirrors/electron/
 python=C:/Python27/python.exe
 msvs_version=2017
 
 target=5.0.13 
-arch=x64
-target_arch=x64
+arch=ia32
+target_arch=ia32
 disturl=https://atom.io/download/electron
 runtime=electron
 build_from_source=true
 
-node_gyp=D:\Documents\projects\new-electron-python-2\node_modules\node-gyp\bin\node-gyp.js
+node_gyp= *NoNeedToChangeManually*
