optimise notification when rpc-server crashed

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "new-electron-python-2",
+  "name": "electron-python-2",
+  "productName": "Electron Python 2",
   "version": "0.1.0",
   "private": true,
   "scripts": {
