--- a/.npmrc
+++ b/.npmrc
@@ -1,10 +1,10 @@
 python=C:/Python27/python.exe
 msvs_version=2017
 
-target=5.0.13 
+target=8.2.5
 arch=ia32
 target_arch=ia32
-disturl=https://atom.io/download/electron
+disturl=https://electronjs.org/headers
 runtime=electron
 build_from_source=true
 
